re-arranged the head part of the HTML, fixed loose classes on CSS and spacing

--- a/src/styling.css
+++ b/src/styling.css
@@ -17,7 +17,7 @@ h1 {
   font-variation-settings: "wdth" 100;
   line-height: auto;
   letter-spacing: 0.5em;
-  margin-top: 30px;
+  margin-top: 240px;
   color: #ff99cc;
 }
 
@@ -33,16 +33,6 @@ h2 {
   letter-spacing: 0.4em;
 }
 
-.rounded {
-  border-radius: 10px;
-}
-
-/* .highlight-white {
-  background-color: #000;
-  opacity: 60%;
-  padding: 0 6px;
-} */
-
 .size {
   border-radius: 10px;
   max-width: 40%;
@@ -50,10 +40,9 @@ h2 {
   opacity: 50%;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 400px) {
   h1 {
     font-size: 37px;
-    letter-spacing: 0.3em;
   }
 
   h2 {
